# bc_pibot

./: .env.example  .gitignore  README.md  answer.py  app.py  bc_pibot git commit -m fix(rag) cache PGVector retriever to prevent SQLAlchemy metadata redefinition  config.py  get_series.py  git  main.py  metadata.py  old_app.py  orchestrator.py  prompt.py  pyproject.toml  rag.py  registry.py  requirements.txt  search.py  series_default.py  state_manager.py  tash apply stash@{0}
.streamlit/: config.toml
agents/: plan-orchestratorApi.prompt.md
api/: bde_client.py
azure/: az_ai_search.py  env_azure.txt
catalog/: __init__.py  catalog_service.py  pib_calendar.json  series_catalog.json
cron/: cleanup.sql
data_store/: timeseries.json
db/: azure_ai_search_setup.py  pgvector.sql
docker/: README.md  docker-compose.yml
docs/: BUSINESS_RULES_README.md  FOLLOWUP_SUGGESTIONS.md
model/: README.md  clone_hf_model.py
models/: README.md  base.py
orchestrator/: README.md  __init__.py  classifier_agent.py  data_flow.py  data_router.py  intent_classifier.py  intent_store.py  langchain_factory.py  langchain_llm.py  langchain_memory.py  langchain_orchestrator.py  pg_logging.py  system_prompt.py
pibert_model/: README.md  data_loader.py  main.py  predict_cli.py  process_raw_data.py  requirements.txt  trainer.py  utils.py
qa/: README.md  qa.py  qa_batch.py  qa_interactive.py  questions.txt  questions_new_features.txt  questions_qa_pdf_20260313.txt  questions_streamlit_trace_post_changes.txt  response.txt  run_detail.py  series_context.json  test_all_questions.py  (+1 more)
(+327 files in other folders)
